<resources>
    <string name="app_name">Walking Group</string>
    <string name="title_activity_create_group_maps">Map</string>
    <string name="create_new_group_title">Create new group:</string>
    <string name="group_name_edit_text">Group name</string>
    <string name="group_name_text_view">Group name:</string>
    <string name="choose_destination_location_btn">Choose destination location</string>
    <string name="choose_meeting_place_btn">Choose meeting place</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="selected_destination_location_none">No destination location selected</string>
    <string name="selected_meeting_place_none">No meeting place selected</string>
    <string name="title_activity_sign_up_activity">SignUpActivity</string>

    <!--API Key for Group Olive obtained from: https://cmpt276-1177-bf.cmpt.sfu.ca:8184/web/index.html-->
    <string name="apikey">506224F3-9B49-46FA-BCD1-E6817704A6BF6</string>
    <string name="title_activity_join_group">Map</string>
    <string name="groupDetail_groupName">Group Name:</string>
    <string name="groupDetail_groupLeader">Leader:</string>
    <string name="groupDetail_groupDescription">Description:</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password123">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="first_lastname">First Lastname</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="valid_email_com">valid@email.com</string>
    <string name="name">Name</string>
    <string name="groupDetail_BtnText">"Interact"</string>
    <string name="groupDetail_groupMembers">Members</string>
    <string name="listGroups_headerTitle">My Groups</string>
    <string name="dashboard_viewMyGroupsBtn">My Groups</string>
    <string name="groupListItem_leaderTagText">Leader</string>
    <string name="sampleText">Sample Text</string>
    <string name="listUsers_cancelBtn">Cancel</string>
    <string name="listUsers_youTag">You</string>
    <string name="listUsers_monitorTag">Monitor</string>
    <string name="groupDetail_minusSign">\u2013</string>
    <string name="groupDetail_plusSign">+</string>
    <string name="groupDetail_emptyMessage">(Empty)</string>
    <string name="caption_password">Password:</string>
    <string name="hint_email">Email</string>
    <string name="title_map_activity">Map Activity</string>
    <string name="dashboard_monitorBtn">Monitor</string>
    <string name="dashboard_mapBtn">Map</string>
    <string name="dashboard_createGroupBtn">New Group</string>
    <string name="dashboard_logoutBtn">Logout</string>
    <string name="monitorAct_monitorTitle">Monitor</string>
    <string name="caption_whoMonitorsMe">Who monitors me</string>
    <string name="caption_whomIMonitor">Whom I monitor</string>
    <string name="btn_edit">Edit</string>
    <string name="groupListItem_monitorTagText">Monitor</string>
    <string name="findGroup_headerTitle">Find a group</string>
    <string name="loginError">Error getting user details, please re-login in</string>
    <string name="invalidInput">Please enter a valid value!</string>
    <string name="create_group_serverReply">Server replied with group:</string>
    <string name="create_group_chooseMeetingPlace">Please choose a meeting place</string>
    <string name="create_group_destPlace">Please choose a destination place</string>
    <string name="create_group_enterName">Please enter a group name</string>
    <string name="create_group_latCaption">Lat:</string>
    <string name="create_group_lngCaption">Long:</string>
    <string name="create_group_errorMsg">Error create group, please logout and login and try again</string>
    <string name="dashBoard_headerText">Dash Board</string>
    <string name="dashBoard_messagesText">!</string>
    <string name="messagesActivity_headerText">Messages</string>
    <string name="messagesActivity_newMessageBtnText">+</string>
    <string name="messagesActivity_youTag">You:\ </string>
    <string name="newMessage_headerText">Compose New Message</string>
    <string name="newMessage_toUserInputPrompt">To:</string>
    <string name="newMessage_groupListTitle">My Groups</string>
    <string name="newMessage_newMessageText">+</string>
    <string name="chatActivity_EditTextHint">Message</string>
    <string name="btn_setActiveGroup_text">walk</string>
    <string name="start_walk_group_name">Started uploading GPS location with group name:</string>
    <string name="btn_stop_upload">Stop Upload</string>
    <string name="btn_tracker">Tracker</string>
    <string name="settings">Settings</string>
    <string name="sign_up_user">Sign Up User</string>
    <string name="home_phone">Home Phone</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="birth_year">Birth Year</string>
    <string name="address">Address</string>
    <string name="school_grade">School Grade</string>
    <string name="email_address">Email Address</string>
    <string name="birth_month">Birth Month</string>
    <string name="SignupErrorMessage">Please check to ensure the inputs are valid</string>
    <string name="edit_monitored_user_profile">Edit Monitored User Profile</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="_778_111_1111">778-111-1111</string>
    <string name="_604_310_1010">604-310-1010</string>
    <string name="emergency_contact_information">Emergency Contact Information</string>
    <string name="street_city_province_postal_code_canada">Street, City Province, Postal Code, Country</string>
    <string name="grade">Grade (K-12)</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="yyyy">yyyy</string>
    <string name="mm">mm</string>
    <string name="UpdateUserInformatonSuccessfully">User Information Updated Successfully</string>
    <string name="profile">Profile</string>
    <string name="PermissionAvailableToEdit">Permission available to edit this profile</string>
    <string name="PermissionUnavailableToEdit">Permission unavailable to edit this profile</string>
    <string name="LoginErrorMessage">An error occurred, please login again.</string>
    <string name="ProfileUpdateSuccess">Successfully updated profile information.</string>
    <string name="last_updated_about">Last updated: about</string>
    <string name="last_updated_error">Error</string>
    <string name="last_updated_less_secs">less than a second ago</string>
    <string name="last_updated_secs_ago">second(s) ago</string>
    <string name="last_updated_mins_ago">minute(s) ago</string>
    <string name="last_updated_hours_ago">hour(s) ago</string>
    <string name="last_updated_days_ago">day(s) ago</string>
    <string name="last_updated_months_ago">month(s) ago</string>
    <string name="last_updated_years_ago">year(s) ago</string>
    <string name="last_updated_never">Last updated: never</string>
    <string name="dashBoard_stopUploadText">Stop Upload</string>
    <string name="dashBoard_panicText">Panic!</string>
    <string name="dashBoard_trackerText">Tracker</string>
    <string name="edit">Edit</string>
    <string name="monitored_by">Monitored By:</string>
    <string name="emergency_contact">Emergency Contact:</string>
    <string name="view_teacher_name">Teacher Name:</string>
    <string name="view_current_grade">Current Grade:</string>
    <string name="view_email">Email:</string>
    <string name="view_cell_phone">Cell Phone:</string>
    <string name="view_home_phone">Home Phone:</string>
    <string name="view_address">Address:</string>
    <string name="view_birthday">Birthday:</string>
    <string name="view_name">Name:</string>
    <string name="chatActivity_modeText">Send as emergency:</string>
    <string name="track_user_timestamp">Timestamp:</string>
    <string name="upload_gps_has_arrived">You have arrived at destination location</string>
    <string name="exclamationMark">!</string>
    <string name="dashBoard_permissionsText">Permissions</string>
    <string name="viewPermissions_headerText">Permissions</string>
    <string name="btn_leaderboard">Leaderboard</string>
    <string name="rank_points_placeholder">000</string>
    <string name="leaderboard_rank_title">#</string>
    <string name="leaderboard_name_title">Name</string>
    <string name="leaderboard_points_title">Points</string>
    <string name="leaderboard_main_title">Leaderboard</string>
    <string name="btn_view_current_rewards">View current rewards</string>
    <string name="btn_ok_currentrewards">OK</string>
    <string name="permissionItem_denyBtnTxt">DENY</string>
    <string name="permissionItem_approveBtnTxt">APPROVE</string>
    <string name="permissionItem_deniedTagTxt">DENIED</string>
    <string name="permissionItem_approvedTagTxt">APPROVED</string>
    <string name="permissionItem_pendingTagTxt">PENDING</string>
    <string name="permissionItem_onBehalfTxt">\u0020on behalf of you.</string>
    <string name="permissionItem_usersApprovedTxt">Approved by:\u0020</string>
    <string name="permissionItem_deniedByTxt">Denied by:\u0020</string>
    <string name="permissionItem_pendingTxt">Pending:\u0020</string>
    <string name="viewPermissions_pendingBtnTxt">Pending</string>
    <string name="viewPermissions_approvedBtnTxt">Approved</string>
    <string name="viewPermissions_deniedBtnTxt">Denied</string>
    <string name="viewPermissions_allBtnTxt">All</string>
    <string name="emptyText">Empty</string>
    <string name="title_currentrewards_tier">Tier</string>
    <string name="current_rewards_no_rewards">No rewards to show.  Go walk to earn points and get rewards!</string>
    <string name="serverrequestsent">Successfully sent request; if permissions are required please check the status in the dashboard.</string>
    <string name="btn_current_rewards_cancel">Cancel</string>
</resources>
