<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.EditUserInformationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSubmitEditUser"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/txtSetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetPassword"
                android:ems="10"
                android:hint="@string/first_lastname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/txtSetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/valid_email_com"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cell_phone" />

            <EditText
                android:id="@+id/txtSetCellphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetAddress"
                android:ems="10"
                android:hint="@string/_778_111_1111"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_phone" />

            <EditText
                android:id="@+id/txtSetHomephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetCellphone"
                android:ems="10"
                android:hint="@string/_604_310_1010"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_contact_information" />

            <EditText
                android:id="@+id/txtSetEmergencyContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/emergency_contact_information"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/txtSetAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/street_city_province_postal_code_canada"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school_grade" />

            <EditText
                android:id="@+id/txtSetGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnSubmitEditUser"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/grade"
                android:inputType="none|numberSigned|numberDecimal" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher_name" />

            <EditText
                android:id="@+id/txtSetTeachername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetHomephone"
                android:ems="10"
                android:hint="@string/teacher_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_year" />

            <EditText
                android:id="@+id/txtSetBirthyear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetName"
                android:ems="10"
                android:hint="@string/yyyy"
                android:inputType="number|numberSigned|numberDecimal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_month" />

            <EditText
                android:id="@+id/txtSetBirthmonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtSetBirthyear"
                android:ems="10"
                android:hint="@string/mm"
                android:inputType="number|numberSigned|numberDecimal" />

            <Button
                android:id="@+id/btnSubmitEditUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/submit"
                tools:text="Submit" />

            <Button
                android:id="@+id/btnCancelSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/btnSubmitEditUser"
                android:layout_marginEnd="0dp"
                android:text="@string/cancel"
                tools:text="Cancel" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_user_information" />

</RelativeLayout>