<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.UserDetailsActivity">

    <TextView
        android:id="@+id/detailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/view_birthday"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/view_address"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/view_home_phone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailCell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/view_cell_phone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:text="@string/email"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:text="@string/view_current_grade"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:text="@string/view_teacher_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/detailEmergencyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:text="@string/emergency_contact"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:text="@string/monitored_by"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/monitorsMe"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="420dp"/>

    <Button
        android:id="@+id/btnEditInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="40dp"
        android:text="@string/edit"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="484dp" />

    <TextView
        android:id="@+id/txtDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/detailName"
        android:layout_marginStart="135dp" />

    <TextView
        android:id="@+id/txtDisplayBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailBirthday" />

    <TextView
        android:id="@+id/txtDisplayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailAddress" />

    <TextView
        android:id="@+id/txtDisplayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailPhone" />

    <TextView
        android:id="@+id/txtDisplayCell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detailCell"
        android:layout_alignStart="@+id/txtDisplayName" />

    <TextView
        android:id="@+id/txtDisplayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailEmail" />

    <TextView
        android:id="@+id/txtDisplayGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailGrade" />

    <TextView
        android:id="@+id/txtDisplayTeacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtDisplayName"
        android:layout_alignTop="@+id/detailTeacher" />

    <TextView
        android:id="@+id/txtDisplayEmergencyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/detailEmergencyContact"
        android:layout_alignBottom="@id/btnEditInformation"
        android:layout_toEndOf="@+id/monitorsMe" />

    <Button
        android:id="@+id/btnCurrentRewards"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEditInformation"
        android:layout_alignEnd="@+id/btnEditInformation"
        android:text="@string/btn_view_current_rewards" />

</RelativeLayout>