<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.CurrentRewardsActivity">

    <TextView
        android:id="@+id/textViewNoRewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sampleText" />

    <ListView
        android:id="@+id/listViewCurrentRewardsIcons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCurrentRewardsOK"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/btn_ok_currentrewards" />

        <Button
            android:id="@+id/btnCurrentRewardsCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/btn_current_rewards_cancel" />
    </LinearLayout>
</LinearLayout>