<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MonitorActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/monitorAct_monitorTitle"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <ListView
        android:id="@+id/monitorsMe"
        android:layout_width="120dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="105dp"
        android:background="#8ce7f6fb" />

    <ListView
        android:id="@+id/IMonitor"
        android:layout_width="120dp"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/monitorsMe"
        android:layout_marginEnd="50dp"
        android:background="#8ce7f6fb" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/monitorsMe"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="-105dp"
        android:text="@string/caption_whoMonitorsMe"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/monitorsMe"
        android:layout_alignStart="@+id/IMonitor"
        android:layout_marginBottom="-105dp"
        android:text="@string/caption_whomIMonitor"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/editMonitorsMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/monitorsMe"
        android:text="@string/btn_edit" />

    <Button
        android:id="@+id/editIMonitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/IMonitor"
        android:layout_below="@+id/IMonitor"
        android:text="@string/btn_edit" />

    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:text="Refresh" />


</RelativeLayout>